[project]
name = "wsaduiology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "create-dagster>=1.10.21",
    "dagster>=1.10.21",
    "dagster-airbyte>=0.26.21",
    "dagster-dbt>=0.26.21",
    "dagster-webserver>=1.10.21",
    "dbt-bigquery>=1.9.2",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]
